# lima-memtester

./: CMakeLists.txt  arm-neon.S  build-lima-memtester-static-binary.sh  build-textured-cube-static-binary.sh  lima-memspeed.c  lima-memspeed.h  lima-memtester-arm-static  lima-memtester-genchart  lima-memtester.c  lima-textured-cube.c  load_mali_kernel_module.c  load_mali_kernel_module.h  main.c  memspeed_fb.c  memspeed_fb.h  memspeed_gpu.c  memspeed_gpu.h  readme.txt  shader_f.h  shader_f.mbs.libmali  shader_f.mbs.lima_compiler_new_1980a735  shader_f.mbs.lima_compiler_old_88767a36  shader_v.h  shader_v.mbs.libmali  textured_cube_mainloop.c
include/: version.h
include/linux/: ioctl.h
limadriver/: README.md
limadriver/limare/lib/: fb.c  jobs.c  limare.c  pp.c
limadriver/limare/tests/cube_textured_spinning/: limare.c
limare/lib/: jobs.h  program.c
limare/tests/cube_textured_spinning/: limare.c  shader_v.h
memtester-4.3.0/: _test-compare-regions.c  a.out  arm-asm-helpers.S  memtester.c  memtester.h  tests.c
